# dpt

./: .gitignore  README.md  a.json  a.toml  a.yaml  pyproject.toml
src/dpt/: __main__.py  schema.py
src/dpt/templates/: Dockerfile.jinja
tests/: test_dpt.py
